# ATDP

./: .dockerignore  .env.example  .gitignore  Dockerfile  How2Test.md  LICENSE  README.md  docker-compose.host-ollama.yml  docker-compose.yml  llms.txt  pyproject.toml
atdp_data_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
atdp_proxy/: __init__.py  app.py  config.py  recorder.py  schemas.py  storage.py  telemetry.py
atdp_proxy/datasets/: __init__.py  exporters.py
atdp_proxy/evolution/: __init__.py  signals.py
atdp_proxy/governance/: __init__.py  redaction.py
atdp_proxy/ingress/: __init__.py  boundary.py  client.py
atdp_proxy/learning/: __init__.py  steps.py
atdp_proxy/observability/: __init__.py
atdp_proxy/providers/: __init__.py  base.py  openai_compatible.py
examples/: Dockerfile.agent  ollama_agent.py
tests/: test_proxy.py
