[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atdp-data-proxy"
version = "0.1.0"
description = "Provider-agnostic ATDP data proxy for learning-ready agent trajectories."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[tool.setuptools.packages.find]
include = ["atdp_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
